openshift/vllm/vllm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vllm
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vllm
          #annotations:
          #irq-load-balancing.crio.io: "disable"
    spec:
#      nodeSelector:
#        kubernetes.io/hostname: d41-h02-000-r660
          #schedulerName: topo-aware-scheduler
      containers:
      - name: vllm
        image: quay.io/smalleni/vllm:latest
        command: ["/bin/sh", "-c"]
        args: [
          "vllm serve meta-llama/Llama-3.2-1B-Instruct --port 8001"
        ]
        ports:
          - containerPort: 8001
        volumeMounts:
          - name: llama-storage
            mountPath: /root/.cache/huggingface
        securityContext:
          allowPrivilegeEscalation: true
        resources:
          requests:
            cpu: 48
            memory: "32Gi"
          limits:
            cpu: 48
            memory: "32Gi"
      volumes:
      - name: llama-storage
        persistentVolumeClaim:
          claimName: vllm-models
