openshift/vllm/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name:  sai-vllm
  labels:
    app: vllm
spec:
  to:
    kind: Service
    name: vllm-server
    weight: 100
  port:
    targetPort: vllmport
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
